Made formatting changes.

--- a/BasicStartPage/Views/Home/Index.cshtml
+++ b/BasicStartPage/Views/Home/Index.cshtml
@@ -3,19 +3,26 @@
 }
 
 
+<div class="row text-center">
+    <h4>Hi, I'm Coleman </h4>
+</div>
 <div class="row">
-    <h1>Hi, I'm Coleman </h1>
+    <div class="col text-center">
+   
+    <p>I have many skills, among them are:</p>
     <ul class="mainList">
         <li>.Net Developer (C# - WinForms, C# - MVC) </li>
         <li>Javascript (MERN stack) Developer</li>
         <li>Tech Enthusiast</li>
+        <li>Personal Chef (to my family)</li>
     </ul>
+    </div>
 </div>
 <br/>
 <div class="container">
 <p>Here are a few of my most recent projects:</p>
 <div class="row">
-    <div class="col">
+    <div class="col text-center">
     <ul>
         <li>
                         <a href="https://github.com/CharleeBrown/PDFtoXLS">PDFtoXLS</a>
