--- a/BasicStartPage/wwwroot/css/site.css
+++ b/BasicStartPage/wwwroot/css/site.css
@@ -1,7 +1,9 @@
 .mainList{
-    list-style-type:none;
+    list-style-type:square;
 }
-
+h4:hover{
+    color:aqua
+}
 html {
   font-size: 14px;
 }
@@ -19,4 +21,5 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color:whitesmoke;
 }
